--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
     "@babel/runtime": "^7.22.5",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.11.16",
     "@mui/joy": "^5.0.0-beta.18",
     "@mui/material": "^5.13.4",
