--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "sass": "^1.62.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "yup": "^1.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
