--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/runtime": "^7.22.5",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.3.3",
     "@material-ui/core": "^4.12.4",
     "@material-ui/lab": "^4.0.0-alpha.61",
     "@mui/icons-material": "^5.11.16",
@@ -22,9 +23,11 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.45.0",
+    "react-opencv": "^0.0.0",
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-webcam": "^7.2.0",
     "redux": "^4.2.1",
     "sass": "^1.62.1",
     "web-vitals": "^2.1.4",
